endret .js-fil link i index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
 
     <canvas id="canvas" width="720" height="480"></canvas>
-    <script src="test2d-2.js" charset="utf-8"></script>
+    <script src="test2d.js" charset="utf-8"></script>
   </body>
 </html>
