--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Nytt spill</title>
       <link rel="stylesheet" href="styles.css">
       <style>
-      	canvas { background: url("img/background.png"); display: block; margin: 0 auto; background-size: cover; }
+      	canvas { background: url("img/background1.jpeg"); display: block; margin: 0 auto; background-size: cover; }
       </style>
   </head>
   <body>
