fjernet litt unødvendig filer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       canvas { background: url("img/background1.png"); display: block; margin: 0 auto; background-size: cover; }
     </style>
   </head>
-  <body>
+  <body onload="draw()">
 
   <ul id="meny">
     <li><a class="active" href="index.html"> Hjem </a></li>
