menybildet laster kjappere ved refresh

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hjemmeside G25</title>
     <link rel="stylesheet" href="felles-webside.css">
     <style>
-      canvas { background: url("img/background1.png"); display: block; margin: 0 auto; background-size: cover; }
+      canvas { background: url("img/Ninja.jpg"); display: block; margin: 0 auto; background-size: cover; }
     </style>
   </head>
   <body onload="draw()">
