--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   </ul>
   <br>
-  <canvas id="canvas" width="720" height="480"></canvas>
+  <center><button type="button" id="showCanvas" onclick="goFullScreen()">Play</button></center>
+  <canvas id="canvas" width="720" height="480" ></canvas>
   <script src="test2d.js" charset="utf-8"></script>
 
   </body>
