--- a/kontakt-oss.html
+++ b/kontakt-oss.html
@@ -27,19 +27,19 @@
 <form id="skjema">
       <!-- Navn -->
     <label for="first-name">Fornavn </label>  <br>
-    <input type="text" id="label1" name="first-name" placeholder="Skriv her ..." oninput="fornavn()">
+    <input type="text" id="label1" name="first-name" placeholder="Skriv her ..." oninput="validering()">
      <img id="for_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br>
 
 
       <!-- Etternavn -->
     <label for="last-name">Etternavn </label>  <br>
-    <input type="text" id="label2" name="last-name" placeholder="Skriv her ..." oninput="fornavn()">
+    <input type="text" id="label2" name="last-name" placeholder="Skriv her ..." oninput="validering()">
      <img id="etter_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br>
 
 
       <!-- Email -->
     <label for="email">E-mail </label> <br>
-    <input type="email" id="label3" name="email" placeholder="Skriv her ..." oninput="fornavn()">
+    <input type="email" id="label3" name="email" placeholder="Skriv her ..." oninput="validering()">
      <img id="email_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br> <br>
 
 
@@ -48,7 +48,7 @@
     <select name="valg">
         <option value="1" selected> Tilbakemelding (ris/ros) </option>
         <option value="2"> Spørsmål </option>
-        <option value="3"> Bugs/problem med spiller </option>
+        <option value="3"> Bugs/problem med spillet </option>
         <option value="4"> Nye ideer/forbedringspotensiale </option>
     </select> <br> <br> <br> <br>
 
@@ -56,7 +56,7 @@
       <!--  Kommentarfelt -->
     <label for="textarea"> Skriv din kommentar her! </label> <br>
     <form>
-      <textarea id="label5" placeholder="Skriv her ..." oninput="fornavn()"></textarea> <img id="kommentar_sjekk" src="false-bilde.png" src="check-bilde.jpg"/>
+      <textarea id="label5" placeholder="Skriv her ..." oninput="validering()"></textarea> <img id="kommentar_sjekk" src="false-bilde.png" src="check-bilde.jpg"/>
     </form> <br> <br>
 
 
