--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </ul>
   <br>
   <canvas id="canvas" width="720" height="480"></canvas>
-  <script src="test2d.js" charset="utf-8"></script>
+  <script src="game.js" charset="utf-8"></script>
 
   </body>
 </html>
