history istedenfor credits

--- a/dokumentasjon.html
+++ b/dokumentasjon.html
@@ -13,8 +13,14 @@
     <li><a href="kontakt-oss.html"> Kontakt oss </a></li>
     <li><a href="vaare-lokaler.html"> Våre lokaler </a></li>
   </ul>
+<div id="div2">
+  <h2 class="border" > Dokumentasjon </h2>
+</div>
 
-  <h1> Her skal dokumentasjon være </h1>
+     <a href="http://folk.ntnu.no/magnuvin/spill/Arbeidskontrakt.pdf" class="border"> Link til Arbeidskontrakt </a>
+     <br><br><br>
+
+     <a href="http://folk.ntnu.no/magnuvin/spill/prosjektplan.pdf" class="border">  Link til prosjektplan </a>
 
   </body>
 </html>
