--- a/kontakt-oss.html
+++ b/kontakt-oss.html
@@ -28,19 +28,19 @@
       <!-- Navn -->
     <label for="first-name">Fornavn </label>  <br>
     <input type="text" id="label1" name="first-name" placeholder="Skriv her ..." oninput="validering()">
-     <img id="for_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br>
+     <img id="for_sjekk" src="img/false-bilde.png" src="img/check-bilde.jpg"/></input> <br> <br>
 
 
       <!-- Etternavn -->
     <label for="last-name">Etternavn </label>  <br>
     <input type="text" id="label2" name="last-name" placeholder="Skriv her ..." oninput="validering()">
-     <img id="etter_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br>
+     <img id="etter_sjekk" src="img/false-bilde.png" src="img/check-bilde.jpg"/></input> <br> <br>
 
 
       <!-- Email -->
     <label for="email">E-mail </label> <br>
     <input type="email" id="label3" name="email" placeholder="Skriv her ..." oninput="validering()">
-     <img id="email_sjekk" src="false-bilde.png" src="check-bilde.jpg"/></input> <br> <br> <br>
+     <img id="email_sjekk" src="img/false-bilde.png" src="img/check-bilde.jpg"/></input> <br> <br> <br>
 
 
       <!-- Liste med valg -->
@@ -56,7 +56,7 @@
       <!--  Kommentarfelt -->
     <label for="textarea"> Skriv din kommentar her! </label> <br>
     <form>
-      <textarea id="label5" placeholder="Skriv her ..." oninput="validering()"></textarea> <img id="kommentar_sjekk" src="false-bilde.png" src="check-bilde.jpg"/>
+      <textarea id="label5" placeholder="Skriv her ..." oninput="validering()"></textarea> <img id="kommentar_sjekk" src="img/false-bilde.png" src="img/check-bilde.jpg"/>
     </form> <br> <br>
 
 
