--- a/dokumentasjon.html
+++ b/dokumentasjon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hjemmeside G25</title>
-<link rel="stylesheet" href="felles-webside.css">
+<link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
