--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hjemmeside G25</title>
-    <link rel="stylesheet" href="felles-webside.css">
+    <link rel="stylesheet" href="css/styles.css">
     <style>
       canvas { background: url("img/Ninja.jpg"); display: block; margin: 0 auto; background-size: cover; }
     </style>
@@ -20,7 +20,6 @@
   </ul>
   <br>
   <canvas id="canvas" width="720" height="480" ></canvas>
-  <script src="game.js" charset="utf-8"></script>
-
+  <script src="javascript/game.js" charset="utf-8"></script>
   </body>
 </html>
