--- a/kontakt-oss.html
+++ b/kontakt-oss.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Hjemmeside G25</title>
-<link rel="stylesheet" href="felles-webside.css">
+<link rel="stylesheet" href="css/styles.css">
+
   </head>
   <body>
 
@@ -66,8 +67,6 @@
     </div>
 
 </form>
-
-  <script src="kontakt-oss.js" charset="utf-8"></script>
-
+<script src="javascript/kontakt-oss.js" charset="utf-8"></script>
   </body>
 </html>
