endret font. Endret finn-oss.html og linker til denne.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a class="active" href="index.html"> Hjem </a></li>
     <li><a href="dokumentasjon.html"> Dokumentasjon </a></li>
     <li><a href="kontakt-oss.html"> Kontakt oss </a></li>
-    <li><a href="vaare-lokaler.html"> Våre lokaler </a></li>
+    <li><a href="finn-oss.html"> Finn oss </a></li>
   </ul>
   <br>
 
