--- a/dokumentasjon.html
+++ b/dokumentasjon.html
@@ -11,7 +11,7 @@
     <li><a  href="index.html"> Hjem </a></li>
     <li><a class="active" href="dokumentasjon.html"> Dokumentasjon </a></li>
     <li><a href="kontakt-oss.html"> Kontakt oss </a></li>
-    <li><a href="vaare-lokaler.html"> Våre lokaler </a></li>
+    <li><a href="finn-oss.html"> Finn oss </a></li>
   </ul>
 <div id="div2">
   <h2 class="border" > Dokumentasjon </h2>
