--- a/finn-oss.html
+++ b/finn-oss.html
@@ -11,7 +11,7 @@
       <li><a href="index.html"> Hjem </a></li>
       <li><a href="dokumentasjon.html"> Dokumentasjon </a></li>
       <li><a href="kontakt-oss.html"> Kontakt oss </a></li>
-      <li><a class="active" href="vaare-lokaler.html"> Våre lokaler </a></li>
+      <li><a class="active" href="finn-oss.html"> Finn oss </a></li>
     </ul>
     <br> <br>
 
