--- a/kontakt-oss.html
+++ b/kontakt-oss.html
@@ -13,7 +13,7 @@
         <li><a href="index.html"> Hjem </a></li>
         <li><a href="dokumentasjon.html"> Dokumentasjon </a></li>
         <li><a class="active" href="kontakt-oss.html"> Kontakt oss </a></li>
-        <li><a href="vaare-lokaler.html"> Våre lokaler </a></li>
+        <li><a href="finn-oss.html"> Finn oss </a></li>
       </ul>
     </nav>
 
