--- a/dokumentasjon.html
+++ b/dokumentasjon.html
@@ -16,11 +16,22 @@
 <div id="div2">
   <h2 class="border" > Dokumentasjon </h2>
 </div>
+  <div class="video">
+    <a href="http://folk.ntnu.no/magnuvin/spill/Arbeidskontrakt.pdf" class="button"> Link til Arbeidskontrakt </a>
 
-     <a href="http://folk.ntnu.no/magnuvin/spill/Arbeidskontrakt.pdf" class="border"> Link til Arbeidskontrakt </a>
-     <br><br><br>
-
-     <a href="http://folk.ntnu.no/magnuvin/spill/prosjektplan.pdf" class="border">  Link til prosjektplan </a>
-
+    <a href="http://folk.ntnu.no/magnuvin/spill/prosjektplan.pdf" class="button">  Link til prosjektplan </a>
+  </div>
+  <div>
+    <div class="video" id="videoLabel">
+      <label class="videoLabel">Demoversjon 1</label>
+      <label class="videoLabel">Demoversjon 2</label>
+      <label class="videoLabel">Demoversjon 3</label>
+    </div>
+    <div class="video">
+      <video src="video/demo1.mp4" width="280" height="320" controls> </video>
+      <video src="video/demo2.mp4" width="280" height="320" controls> </video>
+      <video src="video/demo3.mp4" width="280" height="320" controls> </video>
+    </div>
+  </div>
   </body>
 </html>
